# fb_system

./: README.md  feedback.db  main.py  pyproject.toml  test_api.sh
app/api/: api_v1.py
app/core/: config.py
app/models/: __init__.py  pydantic_models.py  tortoise_models.py
app/services/: __init__.py  comment_service.py  feedback_service.py  notification_service.py  stats_service.py  tag_service.py  user_service.py
